# wires

./: .gitignore  CHANGELOG.md  README.md  default.nix  wires.cabal
Control/: Wire.hs
Control/Wire/: Controller.hs  Core.hs  Internal.hs  Trans.hs  Utils.hs  Varying.hs
docs/: wires-overview.graphml
examples/: Utils.hs  feedback.hs  ping-pong.hs
