name:     wires
version:  0.1.0
category: Control, FRP
synopsis: Functional reactive programming library

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2016 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/wires
bug-reports:  https://github.com/esoeylemez/wires/issues
license:      BSD3
license-file: LICENSE

description:  Functional reactive programming library.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/wires.git

flag Examples
    default: False
    description: Build the example programs
    manual: True


library
    build-depends:
        base                >= 4.8 && < 5,
        deepseq             >= 1.4 && < 2,
        profunctors         >= 5.2 && < 6,
        semigroupoids       >= 5.1 && < 6,
        these               >= 0.7 && < 1
    default-language: Haskell2010
    ghc-options: -W -fdefer-typed-holes
    exposed-modules:
        Control.Wire
        Control.Wire.Controller
        Control.Wire.Core
        Control.Wire.Internal
        Control.Wire.Utils
        Control.Wire.Varying

executable wires-ping-pong
    if flag(examples)
        build-depends:
            base >= 4.8 && < 5,
            clock,
            containers,
            profunctors,
            wires
    else
        buildable: False
    default-language: Haskell2010
    ghc-options: -threaded -fdefer-typed-holes
    hs-source-dirs: examples
    main-is: ping-pong.hs
    other-modules: Utils
